--- a/mini-apps/src/pages/coinFlip.css
+++ b/mini-apps/src/pages/coinFlip.css
@@ -2,6 +2,15 @@
     width: 300px;
 }
 
-.buttonC{
-    color:red;
+.actionButton{
+    background: #337cab;
+    color: white;
+    border-radius: 4px;
+    border: 1px solid black;
+    width: 100px;
+}
+
+.buttonContainer{
+    width: 100%;
+    text-align: center;
 }
