--- a/mini-apps/src/pages/coinFlip.css
+++ b/mini-apps/src/pages/coinFlip.css
@@ -8,9 +8,14 @@
     border-radius: 4px;
     border: 1px solid black;
     width: 100px;
+    margin-left: 30px;
+}
+.actionButton:disabled{
+    background: grey;
 }
 
 .buttonContainer{
     width: 100%;
     text-align: center;
+    margin-top:30px;
 }
